--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,47 +1,79 @@
-﻿<Window x:Class="e9361debug.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:Controls="clr-namespace:System.Windows.Controls;assembly=MultiSelectTreeView"
-        mc:Ignorable="d"
-        TextElement.Foreground="{DynamicResource MaterialDesignBody}"
-        TextElement.FontWeight="Regular"
-        TextElement.FontSize="13"
-        TextOptions.TextFormattingMode="Ideal"
-        TextOptions.TextRenderingMode="Auto"
-        Background="{DynamicResource MaterialDesignPaper}"
-        FontFamily="{DynamicResource MaterialDesignFont}"
-        Title="E9361调试软件" Height="auto" Width="auto">
+﻿<Window
+    x:Class="E9361DEBUG.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:Controls="clr-namespace:E9361DEBUG.Controls"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    Title="E9361调试软件"
+    Width="auto"
+    Height="auto"
+    Background="{DynamicResource MaterialDesignPaper}"
+    FontFamily="{DynamicResource MaterialDesignFont}"
+    TextElement.FontSize="13"
+    TextElement.FontWeight="Regular"
+    TextElement.Foreground="{DynamicResource MaterialDesignBody}"
+    TextOptions.TextFormattingMode="Ideal"
+    TextOptions.TextRenderingMode="Auto"
+    mc:Ignorable="d">
     <Grid>
-        <StackPanel Orientation="Vertical">
-            <materialDesign:Card Padding="5" Margin="3">
-                <TextBlock Style="{DynamicResource MaterialDesignHeadline6TextBlock}"
-                           Text="E9361-C0 DEBUG App"
-                           TextAlignment="Center">
-                </TextBlock>
-            </materialDesign:Card>
-            <Button x:Name="Button_ReadTime" Click="Button_ReadTime_Click"
+        <Grid.RowDefinitions>
+            <RowDefinition Height="1*" />
+            <RowDefinition Height="15*" />
+        </Grid.RowDefinitions>
+        <materialDesign:Card Grid.Row="0">
+            <Menu materialDesign:MenuAssist.TopLevelMenuItemHeight="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type materialDesign:Card}}, Path=ActualHeight}">
+                <MenuItem Header="File">
+                    <MenuItem x:Name="Menu_Browse" Header="_Browse" />
+                    <MenuItem Header="Item 2" />
+                    <MenuItem Header="Item 3" />
+                </MenuItem>
+                <MenuItem Header="Edit">
+                    <MenuItem Header="Item 1" />
+                    <MenuItem Header="Item 2" />
+                    <MenuItem Header="Item 3" />
+                </MenuItem>
+                <MenuItem
+                    x:Name="Menu_About"
+                    Click="Menu_About_Click"
+                    Header="About" />
+            </Menu>
+        </materialDesign:Card>
+
+        <Grid Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="auto" />
+                <ColumnDefinition Width="12" />
+                <ColumnDefinition Width="1*" />
+                <ColumnDefinition Width="20" />
+            </Grid.ColumnDefinitions>
+
+            <Controls:CheckTree
+                x:Name="Controls_CheckTree"
+                Grid.Column="0"
+                HorizontalAlignment="Stretch"
+                VerticalAlignment="Stretch" />
+            <StackPanel Grid.Column="2" Orientation="Vertical">
+                <Button
+                    x:Name="Button_ReadTime"
+                    Click="Button_ReadTime_Click"
                     Content="_READ TIME"
                     IsEnabled="{Binding DataContext.ControlsEnabled, RelativeSource={RelativeSource FindAncestor, AncestorType=Window}}"
                     Style="{StaticResource MaterialDesignRaisedLightButton}"
-                    ToolTip="Resource name: MaterialDesignRaisedLightButton">
-            </Button>
-            <materialDesign:Card Padding="5" Margin="5">
-                <TextBox x:Name="TextBox_Result"
-                         Height="auto"
-                         VerticalAlignment="Top"
-                         AcceptsReturn="True"
-                         Style="{StaticResource MaterialDesignOutlinedTextBox}"
-                         TextWrapping="Wrap"
-                         TextAlignment="Justify"
-                         VerticalScrollBarVisibility="Auto" />
-            </materialDesign:Card>
-            <Controls:MultiSelectTreeView>
-                <TreeViewItem Header="Mercury" />
-                <TreeViewItem Header="Venus" />
-            </Controls:MultiSelectTreeView>
-        </StackPanel>
+                    ToolTip="Resource name: MaterialDesignRaisedLightButton" />
+                <materialDesign:Card Margin="5" Padding="5">
+                    <TextBox
+                        x:Name="TextBox_Result"
+                        Height="auto"
+                        VerticalAlignment="Top"
+                        AcceptsReturn="True"
+                        Style="{StaticResource MaterialDesignOutlinedTextBox}"
+                        TextAlignment="Justify"
+                        TextWrapping="Wrap"
+                        VerticalScrollBarVisibility="Auto" />
+                </materialDesign:Card>
+            </StackPanel>
+        </Grid>
     </Grid>
 </Window>
