优化加载数据

--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -44,9 +44,10 @@
         <ToolBarTray Grid.Row="1">
             <ToolBar ClipToBounds="False" Style="{StaticResource MaterialDesignToolBar}">
                 <Button
-                    Click="RestartButton_OnClick"
-                    Content="{materialDesign:PackIcon Kind=Restart}"
-                    ToolTip="Follow me on Twitter" />
+                    x:Name="Button_StartDebug"
+                    Click="Button_StartDebug_Click"
+                    Content="{materialDesign:PackIcon Kind=Play}"
+                    ToolTip="开始测试" />
                 <Button Content="{materialDesign:PackIcon Kind=ContentSave}" ToolTip="Save" />
                 <Separator />
                 <Button
@@ -59,82 +60,6 @@
                     Content="{materialDesign:PackIcon Kind=ContentCopy}"
                     ToolBar.OverflowMode="AsNeeded"
                     ToolTip="Copy that stuff" />
-                <Separator />
-                <Button
-                    Command="Paste"
-                    Content="{materialDesign:PackIcon Kind=ContentPaste}"
-                    ToolBar.OverflowMode="AsNeeded"
-                    ToolTip="Paste some stuff" />
-                <!--
-                    when badging in a toolbar, make sure the parent ToolBar.ClipToBounds="False", and
-                    manually apply the button style
-                -->
-                <materialDesign:Badged
-                    Badge="{materialDesign:PackIcon Alert}"
-                    CornerRadius="5"
-                    ToolBar.OverflowMode="AsNeeded">
-                    <Button
-                        Content="{materialDesign:PackIcon Kind=AirplaneTakeoff}"
-                        Style="{StaticResource {x:Static ToolBar.ButtonStyleKey}}"
-                        ToolTip="Badge it up!" />
-                </materialDesign:Badged>
-                <Separator />
-                <ListBox>
-                    <ListBoxItem ToolTip="This is a lonley toggle with TextBlock instead of icon">
-                        <TextBlock Text="W" />
-                    </ListBoxItem>
-                </ListBox>
-                <Separator />
-                <ListBox SelectedIndex="0">
-                    <ListBox.ToolTip>
-                        <StackPanel>
-                            <TextBlock Text="MaterialDesignToolToggleFlatListBox" />
-                            <TextBlock Text="Exclusive selection" />
-                            <TextBlock Text="ListBoxAssist.IsToggle allows more natural toggle behaviour" />
-                        </StackPanel>
-                    </ListBox.ToolTip>
-                    <ListBoxItem Content="{materialDesign:PackIcon Kind=FormatAlignLeft}" />
-                    <ListBoxItem Content="{materialDesign:PackIcon Kind=FormatAlignCenter}" />
-                    <ListBoxItem Content="{materialDesign:PackIcon Kind=FormatAlignRight}" />
-                    <ListBoxItem Content="{materialDesign:PackIcon Kind=FormatAlignJustify}" />
-                </ListBox>
-                <Separator />
-                <ListBox SelectionMode="Extended">
-                    <ListBox.ToolTip>
-                        <StackPanel>
-                            <TextBlock Text="MaterialDesignToolToggleListBox" />
-                            <TextBlock Text="Multiple selection" />
-                            <TextBlock Text="ListBoxAssist.IsToggle allows more natural toggle behaviour" />
-                        </StackPanel>
-                    </ListBox.ToolTip>
-                    <ListBoxItem Content="{materialDesign:PackIcon Kind=FormatBold}" />
-                    <ListBoxItem Content="{materialDesign:PackIcon Kind=FormatItalic}" />
-                    <ListBoxItem Content="{materialDesign:PackIcon Kind=FormatUnderline}" />
-                </ListBox>
-                <Separator />
-                <Label VerticalAlignment="Center" Content="Font size:" />
-                <ComboBox>
-                    <ComboBoxItem Content="10" />
-                    <ComboBoxItem Content="12" IsSelected="True" />
-                    <ComboBoxItem Content="14" />
-                    <ComboBoxItem Content="16" />
-                </ComboBox>
-                <CheckBox Content="Check" />
-                <Button
-                    Content="{materialDesign:PackIcon Kind=Hotel}"
-                    ToolBar.OverflowMode="Always"
-                    ToolTip="Take a nap" />
-                <RadioButton Content="Radio" GroupName="XXX" />
-                <RadioButton Content="Ga Ga" GroupName="XXX" />
-                <Separator />
-                <RadioButton
-                    Content="{materialDesign:PackIcon Kind=Radio}"
-                    GroupName="YYY"
-                    Style="{StaticResource MaterialDesignToolRadioButton}" />
-                <RadioButton
-                    Content="{materialDesign:PackIcon Kind=EmoticonPoop}"
-                    GroupName="YYY"
-                    Style="{StaticResource MaterialDesignToolRadioButton}" />
                 <Separator />
                 <ToggleButton />
             </ToolBar>
