--- a/Controls/CheckTree.xaml
+++ b/Controls/CheckTree.xaml
@@ -1,11 +1,9 @@
 ﻿<UserControl
-    x:Class="E9361DEBUG.Controls.CheckTree"
+    x:Class="E9361Debug.Controls.CheckTree"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:MultiTree="clr-namespace:System.Windows.Controls;assembly=MultiSelectTreeView"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:E9361DEBUG.Controls"
     xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     d:DesignHeight="400"
     d:DesignWidth="800"
