--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -1,8 +1,8 @@
 ﻿<Window
-    x:Class="E9361DEBUG.MainWindow"
+    x:Class="E9361Debug.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:Controls="clr-namespace:E9361DEBUG.Controls"
+    xmlns:Controls="clr-namespace:E9361Debug.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -50,17 +50,9 @@
                     ToolTip="开始测试" />
                 <Button Content="{materialDesign:PackIcon Kind=ContentSave}" ToolTip="Save" />
                 <Separator />
-                <Button
-                    Command="Cut"
-                    Content="{materialDesign:PackIcon Kind=ContentCut}"
-                    ToolBar.OverflowMode="AsNeeded"
-                    ToolTip="Cut" />
-                <Button
-                    Command="Copy"
-                    Content="{materialDesign:PackIcon Kind=ContentCopy}"
-                    ToolBar.OverflowMode="AsNeeded"
-                    ToolTip="Copy that stuff" />
+
                 <Separator />
+
                 <ToggleButton />
             </ToolBar>
         </ToolBarTray>
