--- a/Controls/ConsoleComSet.xaml
+++ b/Controls/ConsoleComSet.xaml
@@ -1,8 +1,9 @@
 ﻿<UserControl
     x:Class="E9361Debug.Controls.ConsoleComSet"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     d:DesignHeight="450"
     d:DesignWidth="800"
@@ -24,7 +25,9 @@
         <Button
             x:Name="Button_Save"
             Grid.Column="2"
+            Margin="5"
             Click="Button_Save_Click"
-            Content="保存参数" />
+            Content="{materialDesign:PackIcon Kind=ContentSave}"
+            ToolTip="保存参数" />
     </Grid>
 </UserControl>
