fix bug: 串口号刷新时, 要加载上次的选择项

--- a/Controls/ConsoleComSet.xaml
+++ b/Controls/ConsoleComSet.xaml
@@ -28,6 +28,7 @@
             Margin="5"
             Click="Button_Save_Click"
             Content="{materialDesign:PackIcon Kind=ContentSave}"
+            Style="{StaticResource MaterialDesignOutlinedSecondaryDarkButton}"
             ToolTip="保存参数" />
     </Grid>
 </UserControl>
