--- a/Controls/CheckTree.xaml
+++ b/Controls/CheckTree.xaml
@@ -1,9 +1,9 @@
 ﻿<UserControl
     x:Class="E9361Debug.Controls.CheckTree"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-    xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     d:DesignHeight="400"
     d:DesignWidth="800"
@@ -41,9 +41,9 @@
                     </TreeView.ItemContainerStyle>
                     <TreeView.ItemTemplate>
                         <HierarchicalDataTemplate ItemsSource="{Binding Path=Children}">
-                            <StackPanel Orientation="Horizontal">
+                            <StackPanel Background="{Binding BackgroundColor}" Orientation="Horizontal">
                                 <CheckBox IsChecked="{Binding IsEnable}" Visibility="{Binding IsVisible}" />
-                                <TextBlock Text="{Binding Description}" />
+                                <TextBlock Background="{Binding BackgroundColor}" Text="{Binding Description}" />
                             </StackPanel>
                         </HierarchicalDataTemplate>
                     </TreeView.ItemTemplate>
