--- a/Windows/ADE9078Set.xaml
+++ b/Windows/ADE9078Set.xaml
@@ -12,52 +12,5 @@
     Height="450"
     Closed="Window_Closed"
     mc:Ignorable="d">
-    <Grid>
-        <materialDesign:Card
-            Margin="5"
-            HorizontalAlignment="Stretch"
-            VerticalAlignment="Stretch">
-            <StackPanel Orientation="Horizontal">
-                <TextBlock
-                    Margin="5"
-                    VerticalAlignment="Center"
-                    Text="第几路芯片" />
-                <ComboBox
-                    x:Name="ComboBox_RouteIdx"
-                    Margin="5"
-                    VerticalAlignment="Center"
-                    IsEnabled="False"
-                    SelectedIndex="0"
-                    Text="第几路芯片">
-                    <ComboBoxItem Content="1" />
-                    <ComboBoxItem Content="2" />
-                    <ComboBoxItem Content="3" />
-                    <ComboBoxItem Content="4" />
-                    <ComboBoxItem Content="5" />
-                    <ComboBoxItem Content="6" />
-                </ComboBox>
-                <Button
-                    x:Name="Button_SetDefault"
-                    Margin="5"
-                    HorizontalAlignment="Center"
-                    VerticalAlignment="Center"
-                    Click="Button_SetDefault_Click"
-                    Content="恢复芯片默认参数" />
-                <Button
-                    x:Name="Button_Set220V5A0Angle"
-                    Margin="5"
-                    HorizontalAlignment="Center"
-                    VerticalAlignment="Center"
-                    Click="Button_Set220V5A0Angle_Click"
-                    Content="220V 5A 0° 整定" />
-                <Button
-                    x:Name="Button_Set220V5A60Angle"
-                    Margin="5"
-                    HorizontalAlignment="Center"
-                    VerticalAlignment="Center"
-                    Click="Button_Set220V5A60Angle_Click"
-                    Content="220V 5A 60° 整定" />
-            </StackPanel>
-        </materialDesign:Card>
-    </Grid>
+    <Grid x:Name="Grid_Routes" />
 </Window>
