--- a/Windows/ADE9078Set.xaml
+++ b/Windows/ADE9078Set.xaml
@@ -11,6 +11,6 @@
     Width="800"
     Height="450"
     Closed="Window_Closed"
-    mc:Ignorable="d">
+    mc:Ignorable="d" Loaded="Window_Loaded">
     <Grid x:Name="Grid_Routes" />
 </Window>
