--- a/Windows/TerminalAddressSet.xaml
+++ b/Windows/TerminalAddressSet.xaml
@@ -34,7 +34,7 @@
             Grid.Column="1"
             Grid.ColumnSpan="2"
             Margin="10"
-            TextChanged="TextBox_ScanResult_TextChanged" />
+            TextChanged="TextBox_ScanResult_TextChanged" TextWrapping="Wrap" />
         <TextBlock
             Grid.Row="1"
             Grid.Column="0"
@@ -46,9 +46,14 @@
             x:Name="TextBox_TerminalID"
             Grid.Row="1"
             Grid.Column="1"
-            Grid.ColumnSpan="2"
             Margin="10"
             IsEnabled="False" />
+        <Button
+            x:Name="Button_SetTerminalID"
+            Grid.Row="1"
+            Grid.Column="2"
+            Click="Button_SetTerminalID_Click"
+            Content="设置终端ID" />
         <TextBlock
             Grid.Row="2"
             Grid.Column="0"
