--- a/Windows/TerminalAddressSet.xaml
+++ b/Windows/TerminalAddressSet.xaml
@@ -34,7 +34,8 @@
             Grid.Column="1"
             Grid.ColumnSpan="2"
             Margin="10"
-            TextChanged="TextBox_ScanResult_TextChanged" TextWrapping="Wrap" />
+            TextChanged="TextBox_ScanResult_TextChanged"
+            TextWrapping="Wrap" />
         <TextBlock
             Grid.Row="1"
             Grid.Column="0"
